Fix dark mode global colours

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: hsl(0, 0%, 100%);
+  --foreground: hsl(0, 0%, 0%);
   --body-background: hsl(0, 0%, 95%);
   --secondary: hsl(0, 0%, 34%);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-    --body-background: hsl(0, 0%, 10%);
+    --background: hsl(0, 0%, 7%);
+    --foreground: hsl(0, 0%, 95%);
+    --body-background: hsl(0, 0%, 2%);
     --secondary: hsla(0, 0%, 70%, 100%);
   }
 }
